--- a/core.html
+++ b/core.html
@@ -10,14 +10,22 @@
 	<body>
 		<h1>KEMU Emurator</h1>
 		<div class="btn-group" role="group">
-			<button type="button" class="btn btn-default" onclick="buttonOpenFile()">
-				<span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> ファイルの読み込み
-			</button>
-		</div>
-		<div class="btn-group" role="group">
 			<button type="button" class="btn btn-default" onclick="buttonRunStop()">
 				<span class="glyphicon glyphicon-play" aria-hidden="true"></span> 実行/停止
 			</button>
+			<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+				<span class="glyphicon glyphicon-triangle-bottom" aria-hidden="true"></span>
+			</button>
+			<ul class="dropdown-menu" role="menu">
+				<li role="presentation"><a role="menuitem" disabled="disabled">実行速度</a></li>
+				<li role="presentation"><a role="menuitem" tabindex="-1" onclick="runningTimerInterval = 0">最高</a></li>
+				<li role="presentation"><a role="menuitem" tabindex="-1" onclick="runningTimerInterval = 1">1kHz</a></li>
+				<li role="presentation"><a role="menuitem" tabindex="-1" onclick="runningTimerInterval = 2">500Hz</a></li>
+				<li role="presentation"><a role="menuitem" tabindex="-1" onclick="runningTimerInterval = 5">200Hz</a></li>
+				<li role="presentation"><a role="menuitem" tabindex="-1" onclick="runningTimerInterval = 10">100Hz</a></li>
+				<li role="presentation"><a role="menuitem" tabindex="-1" onclick="runningTimerInterval = 100">10Hz</a></li>
+				<li role="presentation"><a role="menuitem" tabindex="-1" onclick="runningTimerInterval = 1000">1Hz</a></li>
+			</ul>
 			<button type="button" class="btn btn-default" onclick="buttonStep()">
 				<span class="glyphicon glyphicon-step-forward" aria-hidden="true"></span> ステップ実行
 			</button>
@@ -31,7 +39,6 @@
 				<span class="glyphicon glyphicon-trash" aria-hidden="true"></span> メモリのクリア
 			</button>
 		</div>
-		<div id="droparea">Drop hex text or binary</div>
 		<div id="statusbox">
 		</div>
 		<ul class="nav nav-tabs" role="tablist">
@@ -60,6 +67,9 @@
 					<tbody id="dasm_body">
 					</tbody>
 				</table>
+				<button type="button" class="btn btn-default" style="float: right" onclick="buttonDisassemble()">
+					<span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> 再アセンブル
+				</button>
 			</div>
 			<div role="tabpanel" class="tab-pane" id="content_memory">
 			</div>
@@ -80,6 +90,7 @@
 			};
 			var memoryControl = {};
 			var core = new KemuCore();
+			var pc = 0;
 
 
 			function loadHex(s) {
@@ -163,22 +174,38 @@
 					if (!k) continue;
 					statusControl[k] = $('<input>').attr('type', 'text').addClass('text-center').data('name', k);
 					$area.append($('<div>').text(k).append(statusControl[k]));
+					var changeEvent = function() {
+						core.reg[$(this).data('name')] = parseInt($(this).val(), 16);
+						if ($(this).data('name') == "PC") {
+							core.reg["PHASE"] = 0;
+							pc = parseInt($(this).val(), 16);
+							core.halted = false;
+						}
+						updateInterface();
+					};
+					statusControl[k].change(changeEvent);
 				}
 				initMemTable(0, $('#content_memory'));
 				initMemTable(0x100, $('#content_user'));
 			}
 
 			function updateInterface(anim) {
+				$('.warning').removeClass('warning');
 				for (var key in core.reg) {
 					if (!key) continue;
 					var s = ("0" + core.reg[key].toString(16)).toUpperCase().slice(-2);
-					if (!anim || statusControl[key].val() != s)
-						statusControl[key].val(s);
+					if (anim && statusControl[key].val() != s)
+						statusControl[key].addClass('warning');
+					statusControl[key].val(s);
 				}
 				for (var i = 0; i < 0x200; i++) {
 					var s = ('0' + core.memory[i].toString(16).toUpperCase()).slice(-2);
-					if (!anim || s != memoryControl[i].val()) memoryControl[i].val(s);
+					if (anim && s != memoryControl[i].val()) 
+						memoryControl[i].addClass('warning');
+					memoryControl[i].val(s);
 				}
+				$('.dasm-line').css('background-color', '');
+				$('.dasm-line-' + pc.toString()).css('background-color', '#FF6');
 			}
 
 			function disassemble() {
@@ -190,7 +217,7 @@
 				for (var i = 0; i <= max; i++) {
 					var text = "", cmd = res[i].disassemble;
 					var count = 0;
-					var tr = $('<tr>');
+					var tr = $('<tr>').addClass('dasm-line').addClass('dasm-line-' + res[i].addr.toString());
 					tr.append($('<td>').text(res[i].addr.toString(16).toUpperCase()));
 					for (var j = 0; j < res[i].binary.length; j++) {
 						text += ("0" + res[i].binary[j].toString(16).toUpperCase()).slice(-2) + "&nbsp;";
@@ -229,36 +256,12 @@
 			}
 
 			$(function(){
-				$(window).on('beforeunload', function(){
-					if (userMemoryModified || programMemoryModified) return "変更が破棄されます。よろしいですか?";
-				});
-
 				// Drag and Drop
 				var cancelEvent = function(e){
 					e.preventDefault();
 					e.stopPropagation();
 					return false;
 				}
-				$('#droparea').on('dragenter', cancelEvent);
-				$('#droparea').on('dragover', cancelEvent);
-				$("#droparea").on("drop",function(event){
-					var e = event.originalEvent;
-					e.preventDefault();
-					console.log(e);
-					e.dataTransfer.dropEffect = 'copy';
-					var files = e.dataTransfer.files;
-					if (files.length > 0) {
-						var r = new FileReader();
-						r.onload = function(){
-							if (!textModified || editor.getValue() == '' || confirm("変更が破棄されます。よろしいですか?")) {
-								editor.setValue(r.result);
-								$('#droparea').css('display', 'none');
-								textModified = false;
-							}
-						};
-						r.readAsText(files[0]);
-					}
-				});
 
 				if (localStorage['KEMU_EMU_HEX']) {
 					if (!loadHex(localStorage['KEMU_EMU_HEX'])) {
@@ -268,8 +271,8 @@
 				}
 
 				initializeInterface();
-				updateInterface();
 				disassemble();
+				updateInterface();
 			});
 
 			function buttonOpenFile() {
@@ -277,24 +280,46 @@
 				return false;
 			}
 
+			var runningTimerInterval = 100;
+			var runningTimer = null;
 			function buttonRunStop() {
-				
+				if (runningTimer != null) {
+					clearTimeout(runningTimer);
+					runningTimer = null;
+				} else {
+					runningTimer = setTimeout(function runningTimerCallback(){
+						core.runSinglePhase();
+						if (core.reg["PHASE"] == 0) pc = core.reg["PC"];
+						updateInterface(true);
+						if (core.halted) {
+							runningTimer = null;
+						} else {
+							runningTimer = setTimeout(runningTimerCallback, runningTimerInterval);
+						}
+					}, runningTimerInterval);
+				}
 			}
 
 			function buttonStep() {
+				if (runningTimer != null) return false;
 				core.runSingleInstruction();
+				if (core.reg["PHASE"] == 0) pc = core.reg["PC"];
 				updateInterface(true);
 				return false;
 			}
 
 			function buttonPhase() {
+				if (runningTimer != null) return false;
 				core.runSinglePhase();
+				if (core.reg["PHASE"] == 0) pc = core.reg["PC"];
 				updateInterface(true);
 				return false;
 			}
 
 			function buttonReset() {
 				core.reset();
+				pc = 0;
+				updateInterface(false);
 				return false;
 			}
 
@@ -304,6 +329,12 @@
 					userMemoryModified = false;
 					updateInterface();
 				}
+			}
+
+			function buttonDisassemble() {
+				disassemble();
+				updateInterface();
+				return false;
 			}
 		</script>
 	</body>
