--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ LOOP:   ADD     ACC,    IX
 		<button type="button" class="btn btn-default" style="float: right" onclick="buttonClearOutput()">
 			<span class="glyphicon glyphicon-trash" aria-hidden="true"></span> クリア
 		</button>
-		<div style="margin: 4em 0; padding: 1em; border-top: 1px solid #aaa; text-align: center; color: #666">作成: 早稲田大学基幹理工学部電子物理システム学科 小津 <a href="https://github.com/OpenWaseda/kemuide" target="_blank">GitHub</a></div>
+		<div style="margin: 4em 0; padding: 1em; border-top: 1px solid #aaa; text-align: center; color: #666">Created by The OpenWaseda Project(<a href="https://github.com/OpenWaseda/kemuide" target="_blank">github</a>)</div>
 
 		<script src="js/jquery.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
