--- a/core.html
+++ b/core.html
@@ -68,8 +68,8 @@
 		</ul>
 		<div class="tab-content">
 			<div role="tabpanel" class="tab-pane active" id="content_reassemble">
-				<div style="max-height: 36em; overflow: scroll">
-					<table class="table table-bordered" style="margin: 1em 0">
+				<div style="max-height: 36em; overflow: scroll; margin: 1em 0;">
+					<table class="table table-bordered" style="margin: 0">
 						<thead>
 							<th style="width: 4em;">Addr</th>
 							<th style="width: 2em;">BP</th>
@@ -299,8 +299,7 @@
 				breakpoints = {};
 				var res = core.disassemble();
 				var max = res.length - 1;
-				while (res[max].disassemble[0] == "NOP") max--;
-				if (max == 0) max = 1;
+				while (max > 0 && res[max].disassemble[0] == "NOP") max--;
 				for (var i = 0; i <= max; i++) {
 					var text = "", cmd = res[i].disassemble;
 					var count = 0;
